--- a/estils.css
+++ b/estils.css
@@ -1,22 +1,53 @@
-
 body {
-    background: linear-gradient(135deg, 
-         #ffee8c 0%,
-        #fbb0e7 50%, 
-        #ffee8c 100%
-    );
-
-   
-
+    margin-top: 0;
+    font-family:Arial, Helvetica, sans-serif;
+    letter-spacing: 0.1px;
+    animation: fondoColor 10s ease-in-out infinite;
+    font-weight: bold;
+    
 }
 
+@keyframes fondoColor {
+  0% {
+    background-color: #ffee8c; /* amarillo pastel */
+  }
 
-/*-------------------------------------INDEX-------------------------*/
+  50% {
+    background-color: #fbb0e7; /* rosa pastel */
+  }
+
+  100% {
+    background-color: #ffee8c; /* lila suave */
+  }
+
+
+  }
+
+
+
+
 
 header{
-    top: 0;
+    
+    background: linear-gradient(
+    135deg,
+    rgba(255, 238, 140, 0.7),
+    rgba(251, 176, 231, 0.7));
+
     position: sticky;
+     z-index: 10;
+    top:0;
+    backdrop-filter: blur(10px); /* efecto glass/frosted */
+  
 }
+
+a{
+transition: 0.2s ease;
+}
+a:hover{
+    transform: scale(1.05);
+}
+
 .nav_bar{
     display: flex;
     justify-content: space-around  ;
@@ -28,7 +59,10 @@ header{
 }
 .logo{
     font-size: 20px;
+
 }
+
+/*-------------------------------------INDEX-------------------------*/
  main{
     display: flex;
     flex-direction: column;
@@ -42,4 +76,127 @@ header{
     border: black solid;
     border-radius: 15px;
     padding: 1rem;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.4);
+    gap: 1rem;
  }
+
+  input {
+    padding: 0.7rem;
+    border: #f2f2f2;
+    background-color: #f2f2f2;
+    border-radius: 6px;
+    transition: 0.2s ease;
+    
+   
+}
+input:hover{
+     cursor: pointer;
+     background-color: #eedeff; 
+
+}
+input:focus {
+    outline: none;
+    box-shadow: 0 0 10px #e5d5fe;
+    background-color: white;
+    transform: scale(1.03);    
+
+}
+
+.req{
+    color: red;
+}
+
+
+
+
+
+input[type="text"]:invalid,
+input[type="email"]:invalid,
+input[type="tel"]:invalid,
+input[type="number"]:invalid  {
+    color: rgb(255, 92, 92);
+    border: 0.5px solid red;
+}
+
+input[type="color"] {
+    width: 50px;
+    height: 40px;
+    border-radius: 6px;
+    padding: 0; 
+    background-color: white;
+}
+
+input[type="checkbox"] {
+    
+    accent-color: #ffee8c; /* color pastel */
+   
+}
+
+input[type="checkbox"]:hover,
+input[type="radio"]:hover {
+    transform: scale(1.1);
+    transition: 0.2s;
+}
+
+
+select {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    background-color: #f7f7f7;
+    transition: 0.3s ease;
+}
+
+select:hover {
+    background-color: #eedeff; 
+}
+
+select:focus {
+    outline: none;
+    box-shadow: 0 0 10px #e5d5fe;
+    background-color: white;
+    transform: scale(1.03);
+}
+
+textarea{
+     border: 1px solid #ccc;
+    border-radius: 6px;
+    background-color: #f7f7f7;
+    transition: 0.3s ease;
+    
+}
+
+textarea:hover{
+    background-color: #eedeff; 
+    
+
+}
+
+textarea:focus{
+    outline: none;
+    box-shadow: 0 0 10px #e5d5fe;
+    background-color: white;
+    transform: scale(1.03);
+
+}
+.botones{
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    
+
+}
+button{
+    padding: 0.8rem;
+    border:none;
+    border-radius: 15px;
+    font-weight: 700;
+    transition: 0.3s ease;
+}
+
+button:hover{
+    cursor: pointer;
+    transform: scale(1.03);
+    background-color: #eedeff; 
+
+}
